fetch data from database and store it in array for posts and friends and also user data

--- a/css/style.css
+++ b/css/style.css
@@ -480,6 +480,9 @@ header .header_right .search input{
     color: var(--primary-clr);
     cursor: pointer;
 }
+.hide{
+    display: none;
+}
 @media (min-width: 798px) {
     header{
         display: none;
